# mutils

./: Android.bp  Android.mk  CMakeLists.txt  README.md  ndk.mk
include/: merge-sort.h  rlog.h  thr-pool.h  timestat.h
src/log/: rlog.cpp
tests/misc/: test-thr-pool.cpp
